# whspr

./: LICENSE  README.md  pyproject.toml
src/whspr/: __init__.py  __main__.py  _cuda_bootstrap.py  _generate_sounds.py  client.py  convert.py  server.py
