
[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


[project]
name = "whspr"
version = "1.0.0"
authors = [{ name = "Kenan Hanke" }]
description = "An interactive dictation tool for local speech recognition using OpenAI's Whisper models."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = ["faster-whisper>=1.1,<2", "pyperclip"]
classifiers = ["Operating System :: POSIX :: Linux"]

[project.urls]
Homepage = "https://github.com/KenanHanke/whspr"

[project.optional-dependencies]
gpu = ["nvidia-cublas-cu12>=12.6,<13", "nvidia-cudnn-cu12>=9.6,<10"]

[project.scripts]
whspr = "whspr.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/whspr"]

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.sdist]
include = ["/src/whspr", "/README.md"]
